--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
                         <eventConfigs>
                             <eventConfig implementation="io.perfana.events.commandrunner.CommandRunnerEventConfig">
                                 <name>K6Runner</name>
-                                <command>k6 run script.js --out influxdb=${influxDbUrl} -e CONSTANT_LOAD_TIME=${duration}s -e RAMPUP_TIME=${rampUpTime}s -e START_RATE=${startRate} -e TARGET_RATE=${targetRate} -e TARGET_BASE_URL=${targetBaseUrl} -e SYSTEM_UNDER_TEST=${systemUnderTest} -e TEST_ENVIRONMENT=${testEnvironment} -e TEST_RUN_ID=${testRunId}</command>
+                                <command>k6 run script.js --out influxdb=${influxDbUrl} -e K6_INFLUXDB_USERNAME=${influxDbUser} -e K6_INFLUXDB_PASSWORD=${influxDbPassword} -e CONSTANT_LOAD_TIME=${duration}s -e RAMPUP_TIME=${rampUpTime}s -e START_RATE=${startRate} -e TARGET_RATE=${targetRate} -e TARGET_BASE_URL=${targetBaseUrl} -e SYSTEM_UNDER_TEST=${systemUnderTest} -e TEST_ENVIRONMENT=${testEnvironment} -e TEST_RUN_ID=${testRunId}</command>
                             </eventConfig>
                             <eventConfig implementation="io.perfana.event.PerfanaEventConfig">
                                 <name>PerfanaEvent</name>
@@ -123,6 +123,49 @@
                                     <annotations>${annotations}</annotations>
                                     <tags>${tags}</tags>
                                 </testConfig>
+                            </eventConfig>
+                            <eventConfig implementation="io.perfana.events.springboot.event.SpringBootEventConfig">
+                                <name>ActuatorEventFrontend</name>
+                                <tags>${sut-config}-fe</tags>
+                                <actuatorBaseUrl>http://${sut-config}-fe-afterburner:8080/actuator</actuatorBaseUrl>
+                                <actuatorEnvProperties>java.runtime.version,JDK_JAVA_OPTIONS,afterburner.async_core_pool_size,featureToggleIdentityMatrix</actuatorEnvProperties>
+                            </eventConfig>
+                            <eventConfig implementation="io.perfana.events.springboot.event.SpringBootEventConfig">
+                                <name>ActuatorEventBackend</name>
+                                <tags>${sut-config}-be</tags>
+                                <actuatorBaseUrl>http://${sut-config}-fe-afterburner:8080/actuator</actuatorBaseUrl>
+                                <actuatorEnvProperties>java.runtime.version,JDK_JAVA_OPTIONS,afterburner.async_core_pool_size,afterburner.datasource.employee.maximum-pool-size</actuatorEnvProperties>
+                            </eventConfig>
+                            <eventConfig implementation="io.perfana.events.testrunconfigcommand.TestRunConfigCommandEventConfig">
+                                <name>GitGetHash</name>
+                                <command>git rev-parse --verify HEAD</command>
+                                <output>key</output>
+                                <key>https://github.com/perfana/perfana-gatling-afterburner</key>
+                                <tags>GitHub</tags>
+                            </eventConfig>
+                            <eventConfig implementation="io.perfana.events.testrunconfigcommand.TestRunConfigCommandEventConfig">
+                                <name>KubernetesGetDeploymentFE</name>
+                                <command>kubectl get deployment ${sut-config}-fe-afterburner -n acme -ojson</command>
+                                <includes>env,resources,image,replicas,strategy,kubernetes</includes>
+                                <excludes>status,password,TOKEN</excludes>
+                                <output>keys</output>
+                                <tags>kubernetes,${sut-config}-fe</tags>
+                            </eventConfig>
+                            <eventConfig implementation="io.perfana.events.testrunconfigcommand.TestRunConfigCommandEventConfig">
+                                <name>KubernetesGetDeploymentBE</name>
+                                <command>kubectl get deployment ${sut-config}-be-afterburner -n acme -ojson</command>
+                                <includes>env,resources,image,replicas,strategy,kubernetes</includes>
+                                <excludes>status,password,TOKEN</excludes>
+                                <output>keys</output>
+                                <tags>kubernetes,${sut-config}-be</tags>
+                            </eventConfig>
+                            <eventConfig implementation="io.perfana.events.testrunconfigcommand.TestRunConfigCommandEventConfig">
+                                <name>KubernetesGetDeploymentMySql</name>
+                                <command>kubectl get statefulset afterburner-db-mysql -ojson</command>
+                                <includes>env,resources,image,replicas,strategy,kubernetes</includes>
+                                <excludes>status,password,secret</excludes>
+                                <output>keys</output>
+                                <tags>kubernetes,afterburner-db-mysql</tags>
                             </eventConfig>
                         </eventConfigs>
                     </eventSchedulerConfig>
