--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
                         <eventConfigs>
                             <eventConfig implementation="io.perfana.events.commandrunner.CommandRunnerEventConfig">
                                 <name>K6Runner</name>
-                                <command>k6 run script.js --out influxdb=${influxUrl} -e K6_INFLUXDB_USERNAME=${influxDbUser} -e K6_INFLUXDB_PASSWORD=${influxDbPassword} -e CONSTANT_LOAD_TIME=${duration}s -e RAMPUP_TIME=${rampUpTime}s -e START_RATE=${startRate} -e TARGET_RATE=${targetRate} -e TARGET_BASE_URL=${targetBaseUrl} -e SYSTEM_UNDER_TEST=${systemUnderTest} -e TEST_ENVIRONMENT=${testEnvironment} -e TEST_RUN_ID=${testRunId}</command>
+                                <command>k6 run script.js --out influxdb=${influxUrl} -e K6_INFLUXDB_USERNAME=${influxUser} -e K6_INFLUXDB_PASSWORD=${influxPassword} -e CONSTANT_LOAD_TIME=${duration}s -e RAMPUP_TIME=${rampUpTime}s -e START_RATE=${startRate} -e TARGET_RATE=${targetRate} -e TARGET_BASE_URL=${targetBaseUrl} -e SYSTEM_UNDER_TEST=${systemUnderTest} -e TEST_ENVIRONMENT=${testEnvironment} -e TEST_RUN_ID=${testRunId}</command>
                             </eventConfig>
                             <eventConfig implementation="io.perfana.event.PerfanaEventConfig">
                                 <name>PerfanaEvent</name>
