--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <!-- dependency versioning -->
         <events-scheduler-maven-plugin.version>2.0.0</events-scheduler-maven-plugin.version>
         <test-events-command-runner.version>1.0.1</test-events-command-runner.version>
-        <perfana-java-client.version>2.0.1</perfana-java-client.version>
+        <perfana-java-client.version>2.0.5-SNAPSHOT</perfana-java-client.version>
         <test-events-wiremock.version>1.1.1</test-events-wiremock.version>
         <test-events-springboot.version>1.0.1-SNAPSHOT</test-events-springboot.version>
         <test-events-test-run-config-command.version>1.0.0-SNAPSHOT</test-events-test-run-config-command.version>
